# ghc-wpc-sample-programs

./: README.md  c.test  stack.yaml  stack.yaml.agda  stack.yaml.all  stack.yaml.idris  stack.yaml.pandoc  stack.yaml.simple
Agda-2.6.1/: Agda.cabal
Agda-2.6.1/src/full/Agda/TypeChecking/: Generalize.hs
basement-0.0.11/Basement/: BoxedArray.hs  Monad.hs
basement-0.0.11/Basement/Block/: Base.hs
hxt-9.3.1.18/src/Text/XML/HXT/Arrow/XmlState/: TypeDefs.hs
hxt-9.3.1.18/src/Text/XML/HXT/DOM/: QualifiedName.hs
hxt-9.3.1.18/src/Text/XML/HXT/Parser/: XmlCharParser.hs
memory-0.15.0/Data/ByteArray/: Bytes.hs  ScrubbedBytes.hs
pandoc-11df2a3c0f2b1b8e351ad8caaa7cdf583e1b3b2e/src/Text/Pandoc/: Options.hs
regex-base-0.94.0.0/: ChangeLog.md
regex-base-0.94.0.0/src/Text/Regex/: Base.hs
regex-base-0.94.0.0/src/Text/Regex/Base/: Context.hs  Impl.hs  RegexLike.hs
simple-app/: simple-app.cabal
simple-lib/: simple-lib.cabal
