name:                simple-lib
version:             0.1.0.0

license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hello
  ghc-options:         -Wall
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base,
                       mtl
  default-language:    Haskell2010
  c-sources:           mylib.c
